--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.1",
   "description": "non official Xtream-Codes IPTV SDK for javascript and NodeJS",
   "author": "Bruno Carvalho de Araujo <brunocarvalhodearaujo@gmail.com>, Izumi-No <kevynmiguel@gmail.com>",
-  "main": "src/main.js",
+  "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "bluebird": "3.5.4",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "fetch-everywhere": "^1.0.5",
-    "http-proxy-middleware": "1.0.6",
-    "lodash.pickby": "4.6.0",
-    "yarn": "1.22.10"
+    "lodash.pickby": "4.6.0"
   },
   "repository": {
-    "url": "https://github.com/Izumi-No/Xtreme-App-React",
+    "url": "https://github.com/Izumi-No/react-api",
     "type": "git"
+  },
+  "scripts": {
+    "start": "node index.js "
   }
 }
