--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "cors": "2.8.5",
     "express": "^4.17.1",
     "fetch-everywhere": "^1.0.5",
-    "lodash.pickby": "4.6.0"
+    "lodash.pickby": "4.6.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1"
   },
   "repository": {
     "url": "https://github.com/Izumi-No/react-api",
