--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Bruno Carvalho de Araujo <brunocarvalhodearaujo@gmail.com>, Izumi-No <kevynmiguel@gmail.com>",
   "main": "src/index.js",
   "dependencies": {
+    "@iconify/icons-mdi": "^1.1.2",
+    "@iconify/react": "^1.1.3",
     "axios": "^0.21.1",
     "bluebird": "3.5.4",
     "body-parser": "1.19.0",
