--- a/package.json
+++ b/package.json
@@ -5,25 +5,20 @@
   "author": "Bruno Carvalho de Araujo <brunocarvalhodearaujo@gmail.com>, Izumi-No <kevynmiguel@gmail.com>",
   "main": "src/index.js",
   "dependencies": {
-    "@iconify/icons-mdi": "^1.1.2",
-    "@iconify/react": "^1.1.3",
     "axios": "^0.21.1",
     "bluebird": "3.5.4",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "^4.17.1",
     "fetch-everywhere": "^1.0.5",
-    "lodash.pickby": "4.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "lodash.pickby": "4.6.0" 
   },
   "repository": {
     "url": "https://github.com/Izumi-No/react-api",
     "type": "git"
   },
   "scripts": {
-    "start": "node index.js "
+    "start": "node index.js ",
+    "start-all": "concurrently \"node index.js\" \"cd app && react-scripts start\""
   }
 }
