--- a/app/package.json
+++ b/app/package.json
@@ -47,7 +47,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3080/api",
+  "proxy": "http://localhost:3080/",
   "devDependencies": {
     "parcel-bundler": "^1.3.1"
   }
