--- a/app/package.json
+++ b/app/package.json
@@ -10,24 +10,31 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "got": "^11.8.1",
     "gulp": "^4.0.2",
-    "netslider": "^1.3.4",
     "node-sass": "^4.13.1",
+    "plyr-react": "^3.0.7",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
     "react-dom": "^17.0.1",
+    "react-player": "^2.8.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-video-js-player": "^1.1.1",
     "routes-js": "^0.1.8",
+    "shaka-player-react": "^1.1.2",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "swiper": "^6.4.8",
+    "web-vitals": "^0.2.4",
+    "wouter": "^2.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-all": "cd .. && yarn start-all"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +56,7 @@
   },
   "proxy": "http://localhost:3080/",
   "devDependencies": {
-    "parcel-bundler": "^1.3.1"
+    "parcel-bundler": "^1.3.1",
+    "react-dplayer": "^0.4.2"
   }
 }
