--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cors": "2.8.5",
     "express": "^4.17.1",
     "fetch-everywhere": "^1.0.5",
-    "lodash.pickby": "4.6.0" 
+    "lodash.pickby": "4.6.0"
+    
   },
   "repository": {
     "url": "https://github.com/Izumi-No/react-api",
@@ -19,6 +20,8 @@
   },
   "scripts": {
     "start": "node index.js ",
-    "start-all": "concurrently \"node index.js\" \"cd app && react-scripts start\""
+    "start-all": "concurrently \"node index.js\" \"cd app && yarn start\""
+  },
+  "devDependencies": {
   }
 }
